# bitFlip

./: .gitignore  CMakeLists.txt  Makefile  README.md  bitFlip-config.cmake.in  bitFlip.cpp  bitFlip.h  bitFlip.scala  bitFlipTest.h  bitFlipTestSuite.cpp  bitFliptSuite.cpp  bitflipbyte.asm  bitflipllloop.asm  build.sbt  dumpassm.sh  findBenchmark.cmake  findShlwapi.cmake  make.exe.stackdump  plugins.sbt  temp.txt
ignore/: build_sbt
include/: BitReverseTable16.h  BitReverseTable8.h  aligned_alloc.h  bitFlip.h  bitFlipAVX.h  bitFlipTables.h  bitFlipVersion.h  typeDeduce.h
nbproject/: Makefile-Arch_Debug.mk  Makefile-Arch_Release.mk  Makefile-Debug.mk  Makefile-MinGW64_Debug.mk  Makefile-MinGW64_Release.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Arch_Debug.bash  Package-Arch_Release.bash  Package-Debug.bash  Package-MinGW64_Debug.bash  Package-MinGW64_Release.bash  Package-Release.bash  configurations.xml  project.properties  project.xml
nbproject/private/: Makefile-variables.mk  configurations.xml  private.xml
nbproject_scala/private/: private.xml
project/: build.sbt
src/: _bitflipbyte.asm  _bitflipllloop.asm  _bitfliplong.asm  bitFlip.cpp  bitFlipAVX.cpp  bitflipbyte.asm  bitfliplong.asm
src/main/scala/: bitFlip.scala
src/main/scala/com/claydonkey/: main.scala
src/test/scala/com/claydonkey/: bitFlipBenchmark.scala
tests/: CMakeLists.txt  Console.cpp  Console.h  bitFlipTest.cpp  bitFlipTest.h  bitFlipTestSuite.cpp  bitFlipTestSuite.h  doxygen_sqlite3.db  flipBits.cpp  flipBits.h
tests/html/: _console_8h_source.html  annotated.html  bit_flip_test_8h_source.html  class_test_suite-members.html  class_test_suite.html  classes.html  classoption_1_1_option-members.html  classoption_1_1_option.html  classoption_1_1_parser-members.html  classoption_1_1_parser.html  classoption_1_1_parser_1_1_store_option_action-members.html  classoption_1_1_parser_1_1_store_option_action.html  classoption_1_1_print_usage_implementation_1_1_line_part_iterator-members.html  classoption_1_1_print_usage_implementation_1_1_line_part_iterator.html  classoption_1_1_print_usage_implementation_1_1_line_wrapper-members.html  classoption_1_1_print_usage_implementation_1_1_line_wrapper.html  classoption_1_1_stats_1_1_count_options_action-members.html  classoption_1_1_stats_1_1_count_options_action.html  files.html  functions.html  functions_func.html  functions_vars.html  hierarchy.html  menudata.js  namespacemembers.html  namespacemembers_func.html  namespaceoption.html  namespaces.html  optionparser_8h.html  optionparser_8h_source.html  structoption_1_1_arg-members.html  structoption_1_1_arg.html  structoption_1_1_descriptor-members.html  structoption_1_1_descriptor.html  structoption_1_1_parser_1_1_action-members.html  structoption_1_1_parser_1_1_action.html  structoption_1_1_print_usage_implementation-members.html  structoption_1_1_print_usage_implementation.html  structoption_1_1_print_usage_implementation_1_1_function_writer-members.html  structoption_1_1_print_usage_implementation_1_1_function_writer.html  (+12 more)
tests/html/search/: all_0.js  all_2.js  all_3.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_7.js  classes_8.js  classes_9.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_b.js  functions_c.js  searchdata.js
tests/latex/: annotated.tex  class_test_suite.tex  classoption_1_1_option.tex  classoption_1_1_parser.tex  classoption_1_1_parser_1_1_store_option_action.tex  classoption_1_1_print_usage_implementation_1_1_line_part_iterator.tex  classoption_1_1_print_usage_implementation_1_1_line_wrapper.tex  classoption_1_1_stats_1_1_count_options_action.tex  files.tex  hierarchy.tex  namespaceoption.tex  namespaces.tex  optionparser_8h.tex  refman.tex  structoption_1_1_arg.tex  structoption_1_1_descriptor.tex  structoption_1_1_parser_1_1_action.tex  structoption_1_1_print_usage_implementation.tex  structoption_1_1_print_usage_implementation_1_1_function_writer.tex  structoption_1_1_print_usage_implementation_1_1_i_string_writer.tex  structoption_1_1_print_usage_implementation_1_1_o_stream_writer.tex  structoption_1_1_print_usage_implementation_1_1_stream_writer.tex  structoption_1_1_print_usage_implementation_1_1_syscall_writer.tex  structoption_1_1_print_usage_implementation_1_1_temporary_writer.tex  structoption_1_1_stats.tex
tools/: get_version.sh
